--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,24 +2,31 @@
 <%= simple_form_for(resource, html:{class: 'login-form'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class= "text-center">
     <%= f.error_notification %>
+    <%= render "devise/shared/error_messages" %>
   </div>
   <div class="form-inputs">
+    <%= f.input :name,
+                label: false,
+                placeholder: "Nome" %>
+    <%= f.input :phone,
+                label: false,
+                placeholder: "Telefone" %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
                 label: false,
-                placeholder: 'E-mail',
+                placeholder: "E-mail",
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
                 label: false,
-                placeholder: 'Password',
+                placeholder: "Password",
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: true,
                 label: false,
-                placeholder: 'Confirm password',
+                placeholder: "Confirm password",
                 input_html: { autocomplete: "new-password" } %>
   </div>
   <%= render 'devise/shared/button_submit', f: f, text: 'Continue' %>
