--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+        <!-- Navigation-->
+        <%= render "layouts/store/nav" %>
+        <!-- Header-->
+        <%= yield %>
+        <!-- Footer-->
+        <%= render "layouts/store/footer" %>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
