--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5" data-turbo="false">
-					<h2 class="heading-section">Word of Socks</h2>
+					<h2 class="heading-section"><%= link_to "Sock Shop", root_path %></h2>
 				</div>
 			</div>
 			<div class="row justify-content-center">
