--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -105,6 +105,11 @@
                     <span>Tables</span></a>
             </li>
 
+                        <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
