--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,48 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sock Shop -- Admin</title>
+    <title>Loja Showzim - Admin</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "admin", "data-turbo-track": "reload" %>
-    	<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <%= javascript_include_tag "admin", "data-turbo-track": "reload", defer: true %>
   </head>
 
-<body id="page-top">
-
+  <body id="page-top">
     <div id="wrapper">
-        <%= render 'layouts/admin/sidebar' %>
-        <div id="content-wrapper" class="d-flex flex-column">
+      <%= render 'layouts/admin/sidebar' %>
+      <div id="content-wrapper" class="d-flex flex-column">
 
-        <div id="content">
+          <div id="content">
             <%= render 'layouts/admin/topbar' %>
             <div class="container-fluid">
-            <%= yield %>
+              <%= yield %>
             </div>
         </div>
-            <%= render 'layouts/admin/footer'%>
-        </div>
+        <%= render 'layouts/admin/footer'%>
+      </div>
     </div>
+    <%= turbo_frame_tag "bootstrap_modal" %>
 
-        <a class="scroll-to-top rounded" href="#page-top">
-            <i class="fas fa-angle-up"></i>
-        </a>
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- Core plugin JavaScript-->
-        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-        <!-- Custom scripts for all pages-->
-        <script src="js/sb-admin-2.min.js"></script>
-        <!-- Page level plugins -->
-        <script src="vendor/chart.js/Chart.min.js"></script>
-
-        <!-- Page level custom scripts -->
-        <script src="js/demo/chart-area-demo.js"></script>
-        <script src="js/demo/chart-pie-demo.js"></script>
-
-    </body>
+    <a class="scroll-to-top rounded" href="#page-top">
+      <i class="fas fa-angle-up"></i>
+    </a>
+  </body>
 </html>
