crud de produto adicionado

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -25,6 +25,13 @@
 		</a>
 	</li>
 
+	<li class="nav-item">
+		<a class="nav-link collapsed" href="<%= admin_products_path %>">
+			<i class="fa-duotone fa-socks"></i>
+			<span>Products</span>
+		</a>
+	</li>
+
 
 	<li class="nav-item">
 		<a class="nav-link collapsed" data-method="delete" href="<%= destroy_user_session_path %>">
