--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -20,14 +20,13 @@
 
 	<li class="nav-item">
 		<a class="nav-link collapsed" href="<%= admin_categories_path %>">
-			<i class="fas fa-bookmark"></i>
+			<i><%= image_tag "https://cdn-icons-png.flaticon.com/512/2160/2160895.png", width: 25, height: 25 %></i>
 			<span>Categories</span>
 		</a>
 	</li>
-
 	<li class="nav-item">
 		<a class="nav-link collapsed" href="<%= admin_products_path %>">
-			<i class="fa-duotone fa-socks"></i>
+			<i><%= image_tag "https://cdn-icons-png.flaticon.com/512/2368/2368990.png", width: 25, height: 25 %></i>
 			<span>Products</span>
 		</a>
 	</li>
