--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -5,28 +5,32 @@
   <div class = "col-lg-12">
     <div class= "car shadow mb-4">
       <div class= "card-body">
-        <table class="table table-striped">
-          <thead>
-              <th>Name</th>
-              <th>Description</th>
-              <th>Price</th>
-              <th>Activ</th>
-            </thead>
-            <tbody>
-              <% @products.each do |product| %>
-                <tr>
-                  <td><%= product.name %></td>
-                  <td><%= product.description %></td>
-                <td>
-                  <%= link_to "Detail", admin_product_path(product), class: "btn btn-dark" %> |
-                  <%= link_to "Edit", edit_admin_product_path(product), class: "btn btn-warning" %> |
-                  <%= button_to "Delete", admin_product_path(product), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Deseja realmente exlcuir?'} %>
-                </td>
-              </tr>
-              <% end %>
-            </tbody>
-          </thead>
-        </table>
+        <table class="table table-striped table-hover table-bordered">
+              <thead>
+                  <tr>
+                      <th>#</th>
+                      <th>Name <i class="fa fa-sort"></i></th>
+                      <th>Price <i class="fa fa-sort"></i></th>
+                      <th>Description <i class="fa fa-sort"></i></th>
+                      <th>Actions <i class="fa fa-sort"></i></th>
+                  </tr>
+              </thead>
+              <tbody>
+                <% @products.each do |product| %>
+                  <tr>
+                      <td><%= product.id %></td>
+                      <td><%= product.name %></td>
+                      <td><%= product.price  %> $</td>
+                      <td><%= product.description %></td>
+                  <td>
+                    <%= link_to "Detail", admin_product_path(product), class: "btn btn-dark" %>
+                    <%= link_to "Edit", edit_admin_product_path(product), class: "btn btn-warning" %>
+                    <%= link_to "Delete", admin_product_path(product), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Do you really want to delete?'} %>
+                  </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
         <%= link_to "New product", new_admin_product_path, class: "btn btn-primary" %>
       </div>
     </div>
