instalando Activite record e imagem no produto

--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -19,6 +19,10 @@
                 <strong>Activate:</strong>
                 <%= product.publish %>
             </p>
+            <p>
+                <strong>Activate:</strong>
+                <%= image_tag product.image.variant(:thumb) %>
+            </p>
 
         </div>
       </div>
