--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -25,7 +25,7 @@
                   <td>
                     <%= link_to "Detail", admin_product_path(product), class: "btn btn-dark" %>
                     <%= link_to "Edit", edit_admin_product_path(product), class: "btn btn-warning" %>
-                    <%= link_to "Delete", admin_product_path(product), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Do you really want to delete?'} %>
+                    <%= button_to "Delete", admin_product_path(product), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Do you really want to delete?'} %>
                   </td>
                   </tr>
                 <% end %>
