tentando adicionar turbo-stream a tela de crud

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,8 +9,9 @@
                 label: false,
                 placeholder: "Nome" %>
     <%= f.input :phone,
+                input_html: {class: "mask-phone"},
                 label: false,
-                placeholder: "Telefone" %>
+                placeholder: "Phone" %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
