--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -18,7 +18,7 @@
                   <td><%= category.position %></td>
                 <td>
                   <%= link_to "Detail", admin_category_path(category), class: "btn btn-dark" %> |
-                  <%= link_to "Edit", edit_admin_category_path(category), class: "btn btn-warning" %> |
+                  <%= link_to "Edit", edit_admin_category_path(category), "data-controller": "admin-modal", class: "btn btn-warning" %> |
                   <%= button_to "Delete", admin_category_path(category), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Do you really want delete'} %>
                 </td>
               </tr>
